# telegram-task-bot

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  MONITORING.md  README.md  SETUP_COMPLETE.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  push.sh  pytest.ini
api/: Dockerfile  Dockerfile.dev  pyproject.toml
api/src/aiwip_api/: __init__.py  _assignees.py  analytics.py  auth.py  enrich.py  invite.py  main.py  observability.py  schemas.py  seed.py  telegram_link.py
api/tests/: conftest.py  test_analytics.py  test_assignees.py  test_audit.py  test_auth.py  test_candidates.py  test_enrich.py  test_evaluation.py  test_health.py  test_invite.py  test_metrics.py  test_sync_api.py  test_telegram_link.py  test_work_items.py
bot/: Dockerfile  pyproject.toml
bot/src/aiwip_bot/: __init__.py  admin.py  api_client.py  authz.py  cards.py  config.py  digest.py  dispatch.py  handlers.py  ingest.py  main.py  onboarding.py  state.py  (+1 more)
bot/tests/: test_admin.py  test_api_client.py  test_api_client_live.py  test_api_client_methods.py  test_authz.py  test_bot_config.py  test_bot_smoke.py  test_cards.py  test_chat_config.py  test_digest.py  test_dispatch.py  test_handlers.py  test_ingest.py  test_main.py  test_onboarding.py  test_phase4_smoke.py  test_state_watermark.py
core/: alembic.ini  pyproject.toml
core/alembic/: env.py
core/tests/: conftest.py  test_config.py  test_connections.py  test_connector_type_telegram_bot.py  test_migrations.py  test_models.py  test_queue_botbuf.py  test_telemetry.py  test_worker_heartbeat.py
worker/: Dockerfile  Dockerfile.dev  pyproject.toml
worker/tests/: test_bot_api_connector.py  test_bot_api_sync.py  test_connector_factory.py  test_consumer.py  test_context.py  test_e2e.py  test_extract.py  test_get_or_create_chat_bot.py  test_normalize.py  test_notify_emit.py  test_queue.py  test_realtime_ingest_e2e.py  test_resolver.py  test_scheduler_removed.py  test_smoke.py  test_sync.py  test_telethon_removed.py
(+116 files in other folders)
