[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aiwip-api"
version = "0.1.0"
description = "FastAPI backend for the AI Work Intelligence Platform."
requires-python = ">=3.12"
dependencies = [
    "aiwip-core",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]
