[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aiwip-bot"
version = "0.1.0"
description = "Telegram Bot API service (bot-first capture & confirm) for the AI Work Intelligence Platform."
requires-python = ">=3.12"
dependencies = [
    "aiwip-core",
    "aiogram>=3.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
