[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aiwip-worker"
version = "0.1.0"
description = "Background worker (sync, normalization, context, AI pipeline) for the AI Work Intelligence Platform."
requires-python = ">=3.12"
dependencies = [
    "aiwip-core",
    "telethon>=1.36",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
